--- a/.github/workflows/check-video-urls.yml
+++ b/.github/workflows/check-video-urls.yml
@@ -1,8 +1,8 @@
 name: Check and Update M3U Playlist
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  #schedule:
+ #   - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
